Add Redshift integration test