@@ -860,6 +860,34 @@
             </dependencies>
         </profile>
         <profile>
+            <id>run-redshift-integration</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.surefire</groupId>
+                                <artifactId>surefire-junit47</artifactId>
+                                <version>2.22.0</version>
+                            </dependency>
+                        </dependencies>
+                        <!-- Without override, surefire configuration would have skipped our integration tests -->
+                        <configuration combine.self="override">
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <argLine>${argLine} -Xmx2g -Xms1g -XX:MaxPermSize=1024m -XX:SoftRefLRUPolicyMSPerMB=1</argLine>
+                            <!--
+                            <environmentVariables>
+                                <REDSHIFT_LEGEND_INTEG_USERNAME></REDSHIFT_LEGEND_INTEG_USERNAME>
+                                <REDSHIFT_LEGEND_INTEG_PASSWORD></REDSHIFT_LEGEND_INTEG_PASSWORD>
+                            </environmentVariables>
+                            -->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>run_tests_in_teamcity</id>
             <build>
                 <plugins>
@@ -879,6 +907,7 @@
     </profiles>
 
     <dependencies>
+
         <!-- ENGINE -->
         <dependency>
             <groupId>org.finos.legend.engine</groupId>
